2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Add 'mount-point' to the private part of the token, and remove
	'client-ip' from the public part

2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Fix HTTP cache policy

2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* configure.ac:
	* flumotion/component/consumers/Makefile.am:
	* flumotion/component/consumers/applestreamer/Makefile.am:
	* flumotion/component/consumers/applestreamer/__init__.py:
	* flumotion/component/consumers/applestreamer/admin_gtk.py:
	* flumotion/component/consumers/applestreamer/applestreamer.glade:
	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	* flumotion/component/consumers/applestreamer/common.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	* flumotion/component/consumers/applestreamer/resources.py:
	* flumotion/component/consumers/applestreamer (added):
	* flumotion/component/consumers/applestreamer/common.py (added):
	* flumotion/component/consumers/applestreamer/applestreamer.glade
	  (added):
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py
	  (added):
	* flumotion/component/consumers/applestreamer/resources.py (added):
	* flumotion/component/consumers/applestreamer/applestreamer.xml
	  (added):
	* flumotion/component/consumers/applestreamer/admin_gtk.py (added):
	* flumotion/component/consumers/applestreamer/__init__.py (added):
	* flumotion/component/consumers/applestreamer/Makefile.am (added):
	* flumotion/component/consumers/applestreamer/applestreamer.py (added):
	* flumotion/component/consumers/applestreamer/hlsring.py (added):
	Rename component to Apple HTTP Live Streaming

